--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\..\GE\packages\AutoMapper.4.2.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\GE\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
       <Private>True</Private>
@@ -68,8 +72,16 @@
       <HintPath>..\..\GE\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Owin.Host.HttpListener, Version=2.0.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\GE\packages\Microsoft.Owin.Host.HttpListener.2.0.2\lib\net45\Microsoft.Owin.Host.HttpListener.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\GE\packages\Microsoft.Owin.Host.SystemWeb.3.0.1\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Hosting, Version=2.0.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\GE\packages\Microsoft.Owin.Hosting.2.0.2\lib\net45\Microsoft.Owin.Hosting.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin.Security, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -101,10 +113,27 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\GE\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\GE\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\GE\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http.Owin, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\GE\packages\Microsoft.AspNet.WebApi.Owin.5.2.3\lib\net45\System.Web.Http.Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\GE\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -115,6 +144,7 @@
       <HintPath>..\..\GE\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web.Routing" />
     <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\GE\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
       <Private>True</Private>
@@ -148,6 +178,7 @@
     <Compile Include="Attrubutes\MinWordsCountAttribute.cs" />
     <Compile Include="Attrubutes\MaxWordsCountAttribute.cs" />
     <Compile Include="Attrubutes\NotLogRequestAttribute.cs" />
+    <Compile Include="MvcApplication\SxApplication.cs" />
     <Compile Include="MvcControllers\SxAccountController.cs" />
     <Compile Include="MvcControllers\SxBaseController.cs" />
     <Compile Include="MvcControllers\SxPicturesController.cs" />
@@ -166,28 +197,33 @@
     <Compile Include="Managers\SxAppSignInManager.cs" />
     <Compile Include="Managers\SxAppUserManager.cs" />
     <Compile Include="Managers\SxSeoWordCounter.cs" />
+    <Compile Include="MvcWebViewPage\SxWebViewPage.cs" />
     <Compile Include="Providers\SxErrorProvider.cs" />
     <Compile Include="Providers\SxPictureProvider.cs" />
     <Compile Include="Providers\SxQueryProvider.cs" />
     <Compile Include="Providers\SxBannerProvider.cs" />
+    <Compile Include="Providers\SxSiteSettingsProvider.cs" />
     <Compile Include="Providers\SxVideoProvider.cs" />
-    <Compile Include="Repositories\RepoBannedUrl.cs" />
-    <Compile Include="Repositories\RepoComment.cs" />
-    <Compile Include="Repositories\RepoEmployee.cs" />
-    <Compile Include="Repositories\RepoPicture.cs" />
-    <Compile Include="Repositories\RepoSiteSetting.cs" />
-    <Compile Include="Repositories\RepoSiteTestQuestion.cs" />
-    <Compile Include="Repositories\RepoSiteTestBlock.cs" />
-    <Compile Include="Repositories\RepoSiteTest.cs" />
-    <Compile Include="Repositories\RepoVideo.cs" />
-    <Compile Include="Repositories\RepoBannerGroup.cs" />
-    <Compile Include="Repositories\RepoManual.cs" />
-    <Compile Include="Repositories\RepoMaterialCategory.cs" />
-    <Compile Include="Repositories\RepoLike.cs" />
-    <Compile Include="Repositories\RepoBanner.cs" />
-    <Compile Include="Repositories\RepoProjectStep.cs" />
-    <Compile Include="Repositories\RepoStatistic.cs" />
-    <Compile Include="Repositories\RepoUserClick.cs" />
+    <Compile Include="Repositories\SxRepoBannedUrl.cs" />
+    <Compile Include="Repositories\SxRepoComment.cs" />
+    <Compile Include="Repositories\SxRepoEmployee.cs" />
+    <Compile Include="Repositories\SxRepoPicture.cs" />
+    <Compile Include="Repositories\SxRepoRedirect.cs" />
+    <Compile Include="Repositories\SxRepoSeoInfo.cs" />
+    <Compile Include="Repositories\SxRepoSiteSetting.cs" />
+    <Compile Include="Repositories\SxRepoSiteTestQuestion.cs" />
+    <Compile Include="Repositories\SxRepoSiteTestBlock.cs" />
+    <Compile Include="Repositories\SxRepoSiteTest.cs" />
+    <Compile Include="Repositories\SxRepoVideo.cs" />
+    <Compile Include="Repositories\SxRepoBannerGroup.cs" />
+    <Compile Include="Repositories\SxRepoManual.cs" />
+    <Compile Include="Repositories\SxRepoMaterialCategory.cs" />
+    <Compile Include="Repositories\SxRepoLike.cs" />
+    <Compile Include="Repositories\SxRepoBanner.cs" />
+    <Compile Include="Repositories\SxRepoProjectStep.cs" />
+    <Compile Include="Repositories\SxRepoStatistic.cs" />
+    <Compile Include="Repositories\SxRepoUserClick.cs" />
+    <Compile Include="Repositories\SxRepoRequest.cs" />
     <Compile Include="Resources\Files.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
