--- a/SX.WebCore/packages.config
+++ b/SX.WebCore/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="4.2.1" targetFramework="net461" />
   <package id="Dapper" version="1.42" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EPPlus" version="4.0.5" targetFramework="net461" />
@@ -8,9 +9,17 @@
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
