--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -171,9 +171,15 @@
     <Compile Include="Abstract\SxDbModel.cs" />
     <Compile Include="Abstract\SxDbRepository.cs" />
     <Compile Include="Abstract\SxDbUpdatedModel.cs" />
+    <Compile Include="HtmlHelpers\SxGridLookup.cs" />
+    <Compile Include="MvcControllers\SxBannedUrlsController.cs" />
+    <Compile Include="MvcControllers\SxBannerGroupsController.cs" />
+    <Compile Include="MvcControllers\SxBannersController.cs" />
     <Compile Include="MvcControllers\SxEmployeesController.cs" />
     <Compile Include="MvcControllers\SxRequestsController.cs" />
     <Compile Include="MvcControllers\SxSeoController.cs" />
+    <Compile Include="MvcControllers\SxSeoKeywordsController.cs" />
+    <Compile Include="MvcControllers\SxSeoTagsController.cs" />
     <Compile Include="MvcControllers\SxSiteSettingsController.cs" />
     <Compile Include="MvcControllers\SxSiteTestBlocksController.cs" />
     <Compile Include="MvcControllers\SxSiteTestController.cs" />
@@ -182,6 +188,7 @@
     <Compile Include="MvcControllers\SxUserRolesController.cs" />
     <Compile Include="MvcControllers\SxUsersController.cs" />
     <Compile Include="MvcControllers\SxVideosController.cs" />
+    <Compile Include="Repositories\SxRepoSeoKeyword.cs" />
     <Compile Include="SxFilter.cs" />
     <Compile Include="Abstract\SxMaterial.cs" />
     <Compile Include="Abstract\SxPerson.cs" />
@@ -222,7 +229,7 @@
     <Compile Include="Repositories\SxRepoEmployee.cs" />
     <Compile Include="Repositories\SxRepoPicture.cs" />
     <Compile Include="Repositories\SxRepoRedirect.cs" />
-    <Compile Include="Repositories\SxRepoSeoInfo.cs" />
+    <Compile Include="Repositories\SxRepoSeoTags.cs" />
     <Compile Include="Repositories\SxRepoSiteSetting.cs" />
     <Compile Include="Repositories\SxRepoSiteTestQuestion.cs" />
     <Compile Include="Repositories\SxRepoSiteTestBlock.cs" />
@@ -279,7 +286,7 @@
     <Compile Include="SxProjectStep.cs" />
     <Compile Include="SxRedirect.cs" />
     <Compile Include="SxRequest.cs" />
-    <Compile Include="SxSeoInfo.cs" />
+    <Compile Include="SxSeoTags.cs" />
     <Compile Include="SxSeoKeyword.cs" />
     <Compile Include="SxSeoPhrase.cs" />
     <Compile Include="SxSiteMapUrl.cs" />
@@ -290,13 +297,23 @@
     <Compile Include="SxSiteTest.cs" />
     <Compile Include="SxVideo.cs" />
     <Compile Include="SxVideoLink.cs" />
+    <Compile Include="ViewModels\SxVMBannedUrl.cs" />
+    <Compile Include="ViewModels\SxVMBanner.cs" />
+    <Compile Include="ViewModels\SxVMBannerGroup.cs" />
+    <Compile Include="ViewModels\SxVMEditBannedUrl.cs" />
+    <Compile Include="ViewModels\SxVMEditBanner.cs" />
+    <Compile Include="ViewModels\SxVMEditBannerGroup.cs" />
     <Compile Include="ViewModels\SxVMEditPicture.cs" />
+    <Compile Include="ViewModels\SxVMEditSeoKeyword.cs" />
+    <Compile Include="ViewModels\SxVMEditSeoTags.cs" />
     <Compile Include="ViewModels\SxVMEditSiteTest.cs" />
     <Compile Include="ViewModels\SxVMEditSiteTestBlock.cs" />
     <Compile Include="ViewModels\SxVMEditSiteTestQuestion.cs" />
     <Compile Include="ViewModels\SxVMEditVideo.cs" />
     <Compile Include="ViewModels\SxVMEmployee.cs" />
     <Compile Include="ViewModels\SxVMPicture.cs" />
+    <Compile Include="ViewModels\SxVMSeoKeyword.cs" />
+    <Compile Include="ViewModels\SxVMSeoTags.cs" />
     <Compile Include="ViewModels\SxVMSiteSettings.cs" />
     <Compile Include="ViewModels\SxVMSiteTest.cs" />
     <Compile Include="ViewModels\SxVMSiteTestBlock.cs" />
