--- a/SX.WebAdmin/Views/web.config
+++ b/SX.WebAdmin/Views/web.config
@@ -20,6 +20,7 @@
        <!--custom-->
         <add namespace="SX.WebCore.ViewModels"/>
         <add namespace="SX.WebCore.HtmlHelpers"/>
+        <add namespace="SX.WebCore"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
