--- a/SX.WebAdmin/SX.WebAdmin.csproj
+++ b/SX.WebAdmin/SX.WebAdmin.csproj
@@ -183,12 +183,15 @@
     <Compile Include="Controllers\BannersController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\EmployeesController.cs" />
+    <Compile Include="Controllers\FAQController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogsController.cs" />
     <Compile Include="Controllers\PicturesController.cs" />
+    <Compile Include="Controllers\RedirectsController.cs" />
     <Compile Include="Controllers\RequestsController.cs" />
     <Compile Include="Controllers\SeoKeywordsController.cs" />
     <Compile Include="Controllers\SeoTagsController.cs" />
+    <Compile Include="Controllers\SeoWordCounterController.cs" />
     <Compile Include="Controllers\SiteSettingsController.cs" />
     <Compile Include="Controllers\SiteTestBlocksController.cs" />
     <Compile Include="Controllers\SiteTestQuestionsController.cs" />
@@ -270,6 +273,13 @@
     <Content Include="Views\SeoTags\_GeneralEdit.cshtml" />
     <Content Include="Views\SeoTags\_GridView.cshtml" />
     <Content Include="Views\SeoKeywords\_GridView.cshtml" />
+    <Content Include="Views\Redirects\Edit.cshtml" />
+    <Content Include="Views\Redirects\Index.cshtml" />
+    <Content Include="Views\Redirects\_GridView.cshtml" />
+    <Content Include="Views\SeoWordCounter\Index.cshtml" />
+    <Content Include="Views\SeoWordCounter\_Table.cshtml" />
+    <Content Include="Views\FAQ\Index.cshtml" />
+    <Content Include="Views\FAQ\DisplayTemplate\SxVMFAQ.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
