--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -173,8 +173,8 @@
     <Compile Include="Abstract\SxDbUpdatedModel.cs" />
     <Compile Include="Attrubutes\NotEqualAttribute.cs" />
     <Compile Include="HtmlHelpers\SxGridLookup.cs" />
-    <Compile Include="HtmlHelpers\SxLikeButtons.cs" />
-    <Compile Include="MvcControllers\SxLikeButtonsController.cs" />
+    <Compile Include="HtmlHelpers\SxShareButtons.cs" />
+    <Compile Include="MvcControllers\SxShareButtonsController.cs" />
     <Compile Include="MvcControllers\SxNetsController.cs" />
     <Compile Include="MvcControllers\Sx301RedirectsController.cs" />
     <Compile Include="MvcControllers\SxBannedUrlsController.cs" />
@@ -198,7 +198,7 @@
     <Compile Include="MvcControllers\SxUsersController.cs" />
     <Compile Include="MvcControllers\SxVideoLinksController.cs" />
     <Compile Include="MvcControllers\SxVideosController.cs" />
-    <Compile Include="Repositories\SxRepoLikeButton.cs" />
+    <Compile Include="Repositories\SxRepoShareButton.cs" />
     <Compile Include="Repositories\SxRepoNet.cs" />
     <Compile Include="Repositories\SxRepoAppUser.cs" />
     <Compile Include="Repositories\SxRepoMaterialTag.cs" />
@@ -280,7 +280,7 @@
     <Compile Include="SxDbContext.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="SxEmployee.cs" />
-    <Compile Include="SxLikeButton.cs" />
+    <Compile Include="SxShareButton.cs" />
     <Compile Include="SxNet.cs" />
     <Compile Include="SxOrder.cs" />
     <Compile Include="SxLike.cs" />
@@ -317,7 +317,7 @@
     <Compile Include="ViewModels\SxVMEditBannedUrl.cs" />
     <Compile Include="ViewModels\SxVMEditBanner.cs" />
     <Compile Include="ViewModels\SxVMEditBannerGroup.cs" />
-    <Compile Include="ViewModels\SxVMEditLikeButton.cs" />
+    <Compile Include="ViewModels\SxVMEditShareButton.cs" />
     <Compile Include="ViewModels\SxVMEditMaterialTag.cs" />
     <Compile Include="ViewModels\SxVMEditPicture.cs" />
     <Compile Include="ViewModels\SxVMEditProjectStep.cs" />
@@ -330,7 +330,7 @@
     <Compile Include="ViewModels\SxVMEditVideo.cs" />
     <Compile Include="ViewModels\SxVMEmployee.cs" />
     <Compile Include="ViewModels\SxVMFAQ.cs" />
-    <Compile Include="ViewModels\SxVMLikeButton.cs" />
+    <Compile Include="ViewModels\SxVMShareButton.cs" />
     <Compile Include="ViewModels\SxVMNet.cs" />
     <Compile Include="ViewModels\SxVMPicture.cs" />
     <Compile Include="ViewModels\SxVMProjectStep.cs" />
